2009-05-11 yusei
* Bump up the version.
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-03-06 yusei
* Fix typo in notification message.

2009-01-07 fabien
* update some scripts used to generate domain to display planningbox. This permit to increase the speed of the page displaying (about 3 time faster in my tests)

2008-10-07 yusei
* Update field titles for translation.

2008-09-27 yusei
* Added checked_permission argument to contentValues method in
RequirementDocument_getOrphanedRequirementUidList and RequirementDocument_getProjectCoverageList.

2008-09-24 yusei
* Fixed a bug in Requirement_generateRequirements.

2008-09-22 yusei
* Fixed Generate References bug.

2008-09-16 Kazuhiko
* revise task_invoice_builder and task_report_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Task Report.

2008-09-10 vincentd
* Set default selection for Quantity Unit and Currency and fix a little pb on Client

2008-09-10 vincentd
* Change action Title and Return message

2008-09-10 vincentd
* Fix the Quantity input and remove the total price input

2008-09-09 vincentd
* Fix the Create Task action condition

2008-09-09 vincentd
* fix dialog name and script arguments

2008-09-08 vincentd
* add an action for create a task from a sale order line

2008-09-07 yusei
* Update English messages.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-06-13 yusei
* Removed unused action in Project type information.

2008-06-11 rafael
* Use portal_notifications to send messages.

2008-06-11 yo
* Add a notification for finishing a task report.

2008-06-03 vincentd
* Add all rights for manager in :
project_workflow  :  Deleted, Open
task_report_causality_workflow  :  Building, Solving
task_report_workflow  :  Delivered, Deleted, Cancelled
task_workflow  :  Confirmed, Deleted, Cancelled
2008-04-12 rafael