@@ -13,13 +13,14 @@
             <key> <string>delegated_list</string> </key>
             <value>
               <list>
-                <string>title</string>
-                <string>select</string>
-                <string>selection_name</string>
                 <string>columns</string>
+                <string>count_method</string>
+                <string>lines</string>
                 <string>list_method</string>
                 <string>search</string>
-                <string>lines</string>
+                <string>select</string>
+                <string>selection_name</string>
+                <string>title</string>
               </list>
             </value>
         </item>
@@ -106,6 +107,10 @@
                         </tuple>
                       </list>
                     </value>
+                </item>
+                <item>
+                    <key> <string>count_method</string> </key>
+                    <value> <string></string> </value>
                 </item>
                 <item>
                     <key> <string>field_id</string> </key>
