@@ -13,17 +13,18 @@
             <key> <string>delegated_list</string> </key>
             <value>
               <list>
-                <string>title</string>
-                <string>report_tree</string>
+                <string>columns</string>
+                <string>count_method</string>
+                <string>default_params</string>
+                <string>lines</string>
+                <string>list_method</string>
+                <string>portal_types</string>
                 <string>report_root_list</string>
+                <string>report_tree</string>
+                <string>search</string>
                 <string>select</string>
                 <string>selection_name</string>
-                <string>default_params</string>
-                <string>list_method</string>
-                <string>search</string>
-                <string>lines</string>
-                <string>portal_types</string>
-                <string>columns</string>
+                <string>title</string>
               </list>
             </value>
         </item>
@@ -90,6 +91,10 @@
             <key> <string>values</string> </key>
             <value>
               <dictionary>
+                <item>
+                    <key> <string>count_method</string> </key>
+                    <value> <string></string> </value>
+                </item>
                 <item>
                     <key> <string>default_params</string> </key>
                     <value>
