@@ -14,10 +14,10 @@
             <value>
               <list>
                 <string>list_method</string>
-                <string>title</string>
-                <string>report_root_list</string>
-                <string>y_size_block</string>
                 <string>portal_types</string>
+                <string>report_root_list</string>
+                <string>title</string>
+                <string>y_size_block</string>
               </list>
             </value>
         </item>
@@ -148,7 +148,7 @@
                 </item>
                 <item>
                     <key> <string>y_size_block</string> </key>
-                    <value> <string>quantity</string> </value>
+                    <value> <string></string> </value>
                 </item>
               </dictionary>
             </value>
