@@ -14,15 +14,16 @@
             <value>
               <list>
                 <string>all_columns</string>
-                <string>title</string>
-                <string>select</string>
-                <string>selection_name</string>
                 <string>columns</string>
-                <string>sort</string>
+                <string>count_method</string>
                 <string>editable_columns</string>
+                <string>lines</string>
                 <string>list_method</string>
                 <string>search</string>
-                <string>lines</string>
+                <string>select</string>
+                <string>selection_name</string>
+                <string>sort</string>
+                <string>title</string>
               </list>
             </value>
         </item>
@@ -120,6 +121,10 @@
                         </tuple>
                       </list>
                     </value>
+                </item>
+                <item>
+                    <key> <string>count_method</string> </key>
+                    <value> <string></string> </value>
                 </item>
                 <item>
                     <key> <string>editable_columns</string> </key>
