@@ -13,13 +13,13 @@
             <key> <string>delegated_list</string> </key>
             <value>
               <list>
-                <string>round_script</string>
                 <string>list_method</string>
-                <string>title</string>
-                <string>report_root_list</string>
-                <string>selection_name</string>
-                <string>y_size_block</string>
                 <string>portal_types</string>
+                <string>report_root_list</string>
+                <string>round_script</string>
+                <string>selection_name</string>
+                <string>title</string>
+                <string>y_size_block</string>
               </list>
             </value>
         </item>
@@ -142,7 +142,7 @@
                 </item>
                 <item>
                     <key> <string>y_size_block</string> </key>
-                    <value> <string>quantity</string> </value>
+                    <value> <string></string> </value>
                 </item>
               </dictionary>
             </value>
